<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Snapping</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">Sign Up Activity</string>
    <string android:id="@+id/string1" name="email_hint" android:layout_width="wrap_content" android:layout_height="wrap_content">Email</string>
    <string android:id="@+id/string1" name="sign_up_button_label" android:layout_width="wrap_content" android:layout_height="wrap_content">SING UP</string>
    <string name="signup_error_message">Please me sure you entered all your info!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please me sure you entered all your info!</string>
    <string name="login_error_title">Oops!</string>
    <string name="error_title">We are sorry!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages</string>
    <string name="empty_friends_label">No new friend requests</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your devices\' storage.</string>
    <string name="vide_file_size_warning">The selected video must be less than 10 MB</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="general_error">Sorry, there was an error!</string>
    <string name="error_opening_file">There was a problem with the selected file</string>
    <string name="error_file_size">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_selecting_file_title">We are sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again</string>
    <string name="title_activity_view_image">Snapping</string>
    <string name="subtitle">Share it with friends</string>
    <string name="content_desc_background">Background</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string name="content_desc_message_icon">Message icon</string>

</resources>
